hphp/test/zend/bad/ext-spl/spl_pq_top_error_args.php
<?php
$priorityQueue = new SplPriorityQueue();
$priorityQueue->top('var');
?>